@@ -2823,6 +2823,11 @@ void HTMLTextAreaElementImpl::select(  )
     onSelect();
 }
 
+void HTMLTextAreaElementImpl::childrenChanged()
+{
+    setValue(defaultValue());
+}
+    
 void HTMLTextAreaElementImpl::parseHTMLAttribute(HTMLAttributeImpl *attr)
 {
     switch(attr->id())
