@@ -614,6 +614,7 @@ public:
 
     void select (  );
 
+    virtual void childrenChanged();
     virtual void parseHTMLAttribute(HTMLAttributeImpl *attr);
     virtual khtml::RenderObject *createRenderer(RenderArena *, khtml::RenderStyle *);
     virtual bool encoding(const QTextCodec*, khtml::encodingList&, bool);
